# vt_2223_public

hw02/: CMakeLists.txt  benchmark.py  common.c  direct_threaded.c  gen.c  indirect_threaded.c  presentation_commands.md  simple.c  source_machine.c  source_machine.h  super_events.c
hw02/docs/: comparison.md  do_while_macro.c  presentation_commands.md
hw02/include/: gen.h  source_machine.h
